# zscaler-sdk-python

./: .bandit  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LONG_DESCRIPTION.md  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  SECURITY_SCAN_REPORT.md  UPGRADE_GUIDE.md  codecov.yml  debug_zdx_auth.py  dev_requirements.txt  install-package.sh  install_package.sh  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js  setup.py  test_auth_payload.py  tox.ini  trivy.yaml
.github/: set-version.sh  stale.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md  sdk-issue.md  sdk-v2-issue.md
.github/workflows/: build.yml  ci.yml  deploy-docs.yml  python-lint.yml  python-package.yml  release.yml  test_sdk.yml  zcc-test.yml  zcc_test.yml  zcon-test.yml  zdx-test.yml  zdx_test.yml  zeasm.yml  zia-test.yml  zid_test.yml  zidentity_test.yml  zins.yml  zinsights.yml  zms.yml  zpa_test.yml  ztw-test.yml  ztw_test.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/guides/: examples.html  index.html  support.html  support.md  troubleshooting.html
docs/zia/: activate.html  admin_and_role_management.html  apptotal.html  audit_logs.html  authentication_settings.html  cloud_apps.html  device_management.html  dlp.html  firewall.html  forwarding_control.html  index.html  isolation_profile.html  locations.html  rule_labels.html  sandbox.html  security.html  ssl_inspection.html  traffic.html  url_categories.html  url_filtering.html  users.html  web_dlp.html  workload_groups.html  zpa_gateway.html
docs/zpa/: app_segments.html  app_segments_inspection.html  app_segments_pra.html  certificates.html  cloud_connector_groups.html  connectors.html  emergency_access.html  idp.html  index.html  inspection.html  isolation_profile.html  lss.html  machine_groups.html  policies.html  posture_profiles.html  privileged_remote_access.html  provisioning.html  saml_attributes.html  scim_attributes.html  scim_groups.html  segment_groups.html  server_groups.html  servers.html  service_edges.html  trusted_networks.html
docsrc/: Makefile  conf.py  dev_requirements.txt  index.rst
docsrc/zia/: index.rst  locations.rst
docsrc/zpa/: cloud_connector_groups.rst
examples/zia/: README.md
examples/zins/: README.md
examples/zinsights/: README.md
examples/zpa/: README.md  __init__.py
scripts/: check-secrets.sh
tests/: conftest.py  mocks.py  run_oauth_tests.py  test_enhanced_oauth_client.py  test_utils.py  test_zscaler.py
tests/unit/: README.md  __init__.py  mocks.py  test_cache.py  test_config_setter.py  test_constants.py  test_enhanced_logging.py  test_errors.py  test_exceptions.py  test_helpers.py  test_http_client.py  test_jwt.py  test_legacy_clients_rate_limiting.py  test_logger.py  test_models.py  test_oauth.py  test_oauth_proxy.py  test_oneapi_integration.py  test_oneapi_response.py  test_rate_limiting_and_retry.py  test_request_executor.py  test_rsa_key_validation.py  test_traffic_static_ip.py  test_user_agent.py  test_utils.py  test_zbi_client.py  test_zbi_models.py  test_ztb_client.py
tests/zia/: conftest.py  test_admin_and_role_management.py  test_config.py  test_dlp.py  test_firewall.py  test_init.py  test_rule_labels.py  test_sandbox.py  test_security.py  test_session.py  test_ssl_inspection.py  test_traffic.py  test_url_categories.py  test_url_filters.py  test_users.py  test_vips.py  test_web_dlp.py
tests/zpa/: conftest.py  test_zpa_app_segments.py  test_zpa_cloud_connector_groups.py  test_zpa_connectors.py  test_zpa_idp.py  test_zpa_inspection.py  test_zpa_lss.py  test_zpa_policies.py  test_zpa_provisioning.py  test_zpa_scim_attributes.py  test_zpa_scim_groups.py  test_zpa_segment_groups.py  test_zpa_servers.py  test_zpa_session.py  test_zpa_trusted_networks.py
zs/guides/: examples.html
zs/zia/: activate.html  admin_and_role_management.html  firewall.html  forwarding_control.html  isolation_profile.html  locations.html  rule_labels.html  security.html  traffic.html  url_categories.html  web_dlp.html
zs/zpa/: app_segments.html  app_segments_inspection.html  certificates.html  connectors.html  emergency_access.html  idp.html  inspection.html  lss.html  provisioning.html  scim_groups.html
zscaler/: __init__.py  api_client.py  constants.py  error_messages.py  helpers.py  logger.py  oneapi_client.py  oneapi_collection.py  oneapi_http_client.py  oneapi_oauth_client.py  oneapi_object.py  oneapi_response.py  request_executor.py  types.py  user_agent.py  utils.py
zscaler/cache/: cache.py  no_op_cache.py  zscaler_cache.py
zscaler/config/: config_setter.py  config_validator.py
zscaler/errors/: __init__.py  error.py  graphql_error.py  http_error.py  response_checker.py  zscaler_api_error.py
zscaler/exceptions/: __init__.py  exceptions.py
zscaler/ratelimiter/: ratelimiter.py
zscaler/zaiguard/: legacy.py  policy_detection.py  zaiguard_service.py
zscaler/zbi/: custom_apps.py  report_configs.py  reports.py  zbi_service.py
zscaler/zcc/: __init__.py  _field_introspect.py  _serialize.py  admin_user.py  application_profiles.py  client.py  company.py  custom_ip_base_apps.py  devices.py  entitlements.py  fail_open_policy.py  forwarding_profile.py  legacy.py  manage_pass.py  predefined_ip_based_apps.py  process_based_apps.py  secrets.py  trusted_networks.py  web_app_service.py  web_policy.py  web_privacy.py  zcc_service.py
zscaler/zcell/: anomaly_policy.py  audit_data_handling.py  customer_data_handling.py  customer_region_handling.py  network_events.py  sim_analytics.py  sim_handling.py  sim_location_groups.py  tag_handling.py  zcell_service.py
zscaler/zcon/: __init__.py  account_details.py  activation.py  admin.py  admin_and_role_management.py  admin_roles.py  admin_users.py  adminroles.py  adminusers.py  api_keys.py  api_keys_provisioning.py  client.py  connectors.py  ec_groups.py  ecgroup.py  ecgroups.py  (+11 more)
(+1837 files in other folders)
