[tool.poetry]
name = "zscaler-sdk-python"
version = "1.0.0"
description = "Official Python SDK for the Zscaler Products (Beta)"
authors = ["Zscaler, Inc. <devrel@zscaler.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zscaler/zscaler-sdk-python"
repository = "https://github.com/zscaler/zscaler-sdk-python"
documentation = "https://zscaler-sdk-python.readthedocs.io"
keywords = ["zscaler", "sdk", "zcc", "zcon", "zdx", "zia", "zpa", "zwa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules", 
]
packages = [
    { include = "zscaler" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zscaler/zscaler-sdk-python/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flatdict = "*"
pyyaml = "*"
xmltodict = "*"
yarl = "*"
pycryptodomex = "*"
jwcrypto = "*"
pyjwt = "*"
pydash = "*"
flake8 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pytest-recording = "*"
pyfakefs = "*"
pydash = "*"

[tool.poetry.extras]
dev = ["pytest", "pytest-mock", "pytest-recording", "pyfakefs", "pydash", "flake8"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "format",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-public-methods",
    "anomalous-backslash-in-string",
    "import-error",
    "redefined-outer-name",
]

[tool.pylint.'FORMAT']
max-line-length = 127

[tool.isort]
profile = "black"
