[tool.poetry]
name = "zscaler-sdk-python"
version = "1.4.3"
description = "Official Python SDK for the Zscaler Products"
authors = ["Zscaler, Inc. <devrel@zscaler.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zscaler/zscaler-sdk-python"
repository = "https://github.com/zscaler/zscaler-sdk-python"
documentation = "https://zscaler-sdk-python.readthedocs.io"
keywords = ["zscaler", "sdk", "zpa", "zia", "zdx", "zcc", "ztw", "zwa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules", ]
packages = [
    { include = "zscaler" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zscaler/zscaler-sdk-python/issues"

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
requests = ">=2.32.3"
cryptography = ">=45.0.2"
pyyaml = ">=6.0.0"
pytz = ">=2024.2"
python-box = ">=7.3.0"
python-dateutil = ">=2.9.0"
flatdict = ">=4.0.0"
pyjwt = ">=2.8.0"
aenum = ">=3.1.11"
pydash = ">=8.0.3"
arrow = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.3.0"
flake8 = ">=7.0.0"
isort = ">=5.13.0"
pytest = ">=8.3.5"
pytest-mock = ">=3.12.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pyfakefs = ">=5.7.0"
responses = ">=0.25.7"
sphinx = ">=7.2.0"
sphinx-autobuild = ">=2024.1.0"
sphinx_rtd_theme = ">=1.3.0"
wheel = ">=0.42.0"

[tool.poetry.extras]
dev = ["black", "pytest", "pytest-asyncio", "pytest-mock", "pytest-recording", "pytest-cov", "pyfakefs", "isort", "wheel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "format",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-public-methods",
    "anomalous-backslash-in-string",
    "import-error",
    "redefined-outer-name",
]

[tool.pylint.'FORMAT']
max-line-length = 127

[tool.isort]
profile = "black"
